[gd_scene load_steps=3 format=3 uid="uid://bdu5helxx0ew7"]

[ext_resource type="Script" uid="uid://bwekxvx87vfok" path="res://addons/godot-simple-config/GameConfig/BindingConfig/Fields/ButtonBinder/ButtonBinder.gd" id="1_wga3u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wga3u"]
content_margin_left = 15.0
content_margin_top = 15.0
content_margin_right = 15.0
content_margin_bottom = 15.0
bg_color = Color(0.0862745, 0.0862745, 0.0862745, 0.545098)

[node name="ButtonBinder" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.32549)
script = ExtResource("1_wga3u")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="Center"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_wga3u")

[node name="VBoxContainer" type="VBoxContainer" parent="Center/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CenterContainer" type="CenterContainer" parent="Center/PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Center/PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="InstructingLabel" type="Label" parent="Center/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Digite a tecla"
horizontal_alignment = 1

[node name="KeyPressedLabel" type="Label" parent="Center/PanelContainer/VBoxContainer/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Center/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="Center/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="Reset" type="Button" parent="Center/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Reset"

[node name="Ok" type="Button" parent="Center/PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Ok"

[connection signal="pressed" from="Center/PanelContainer/VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="Center/PanelContainer/VBoxContainer/HBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="Center/PanelContainer/VBoxContainer/HBoxContainer/Ok" to="." method="_on_ok_pressed"]
